# typed-eval-rs

./: Cargo.toml  README.md  justfile  rustfmt.toml  todo.md
crates/typed-eval/: Cargo.toml
crates/typed-eval-macro/: Cargo.toml
crates/typed-eval-macro/src/: eval_type.rs  eval_type_methods.rs  lib.rs  supported_type.rs  supported_type_methods.rs
crates/typed-eval/examples/: simple.rs
crates/typed-eval/src/: boxed_fn.rs  compiler.rs  compiler_registry.rs  dyn_fn.rs  error.rs  errors.rs  eval_type.rs  expr.rs  expr_parser.rs  lib.rs  method.rs  parser.rs  registry_access.rs  span.rs  supported_type.rs  tdesc.rs  type_info.rs
crates/typed-eval/src/compiler/: compiler.rs  compiler_registry.rs  method_calls.rs  mod.rs
crates/typed-eval/src/compiler_registry/: compiler_registry.rs  method_calls.rs  mod.rs
crates/typed-eval/src/parser/: mod.rs  parser.rs  tests.rs
crates/typed-eval/tests/: compiler_test.rs  test.rs
crates/typed-eval/tests/common/: context.rs  eval.rs  mod.rs
src/: boxed_fn.rs  compiler.rs  expr.rs  expr_parser.rs  main.rs  supported_type.rs
