[package]
name = "typed-eval-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Macro support for typed-eval, a type-safe expression evaluation engine."

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }

[features]
nightly=[]
