[package]
name = "typed-eval"
version = "0.1.0"
edition = "2024"

[lints.clippy]
module_inception = "allow"

[dependencies]
chumsky = { version = "0.10.1", features = ["unstable"] }
rustversion = "1.0.22"
thiserror = "2.0.16"
typed-eval-macro = { path = "../typed-eval-macro"}

[features]
nightly = []
