[package]
name = "typed-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true


[lints.clippy]
module_inception = "allow"

[dependencies]
chumsky = { version = "0.10.1", features = ["unstable"] }
rustversion = "1.0.22"
thiserror = "2.0.16"
typed-eval-macro.workspace = true 

[features]
nightly = []
